@@ -1,3 +1,9 @@
+2011-04-16 Jim Garlick <garlick.jim@gmail.com>
+
+	* libvxi11/vxi11_device.[ch] : Make default lock and io timeout 25s.
+	When setting io timeout, ensure that RPC timeout is updated to the
+	same value [Alessio Bogani].
+
 2011-04-12 Jim Garlick <garlick.jim@gmail.com>
 
 	* libvxi11/vxi11_device.[ch] : Some cosmetic cleanup [Alessio Bogani].
